[tool.poetry]
name = "tournament_api"
version = "0.1.0"
description = ""
authors = ["David Morales <moralesl07@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "7.1.2"
flake8 = "3.8.4"
Flask = "1.1.2"
flask-sqlalchemy = "2.4.4"
importlib-metadata = "2.0.0"
itsdangerous = "1.1.0"
Jinja2 = "2.11.2"
MarkupSafe = "1.1.1"
mccabe = "0.6.1"
passlib = "1.7.4"
pycodestyle = "2.6.0"
pyflakes = "2.2.0"
SQLAlchemy = "1.3.20"
Werkzeug = "1.0.1"
zipp = "3.4.0"
marshmallow = "^3.18.0"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.28.1"
Flask-Testing = "^0.8.1"
coverage = "^6.5.0"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

